# NCEPLIBS-bacio

./: CMakeLists.txt  LICENSE.md  Makefile.am  Makefile.in  README  README.md  annotated.html  annotated_dup.js  bacio_8c.html  bacio_8c.js  bacio_8c_source.html  baciof_8F90.html  baciof_8F90.js  baciof_8F90_source.html  baciof_8f90.html  baciof_8f90.js  baciof_8f90_source.html  baciof_8h_source.html  bafrio_8F90.html  bafrio_8F90.js  bafrio_8F90_source.html  bafrio_8f90.html  bafrio_8f90_source.html  build_bacio.sh  byteswap_8c.html  byteswap_8c.js  byteswap_8c_source.html  chk__endianc_8F90.html  chk__endianc_8F90.js  chk__endianc_8F90_source.html  chk__endianc_8f90.html  chk__endianc_8f90_source.html  classes.html  clib_8h.html  clib_8h.js  clib_8h_source.html  configure  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+23 more)
.github/workflows/: Intel.yml  Linux.yml  MacOS.yml  Spack.yml  developer.yml  intel.yml  macos.yml  main.yml
4byte/: CMakeLists.txt
8byte/: CMakeLists.txt
Conf/: Bacio_gnu_General.sh  Bacio_intel_Cray.sh  Bacio_intel_Dell.sh  Bacio_intel_Gaea.sh  Bacio_intel_General.sh  Bacio_intel_Hera.sh  Bacio_intel_Theia.sh  Bacio_intel_Wcoss.sh
cmake/: PackageConfig.cmake.in
config-setup/: gfortran.setup  ifort.setup  ncepxlf.setup  pgf95.setup  xlf2003.setup
docs/: Doxyfile.in  user_guide.md
double/: CMakeLists.txt
modulefiles/bacio/: 2.0.2
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
sorc/src/: makebacio_zeus.sh
spack/: package.py
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bacio.c  baciof.F90  baciof.f  baciof.f90  bafrio.F90  bafrio.f  bafrio.f90  byteswap.c  chk_endianc.f90  clib.h  fast-byteswap.h  make.rules  makebacio_ccs.sh  makebacio_zeus.sh
src/test/: Makefile.in  make.dependencies  test_baciof-big_endian.f90  test_baciof-little_endian.f90  test_bafrio-big_endian.f90  test_bafrio-little_endian.f90  test_runner.f90  test_wryte.f90
test/: Makefile.am  tst_bacio.F90
tests/: CMakeLists.txt  test_bacio.f90  test_bacio2.f90  test_bacio_c.c  test_bacio_mod.pf  test_bafrio.F90  test_bafrio.f90  test_byteswap.c
unit_test/scripts/: test_bacio.sh
ver-2.5.0/: bacio_8c.js  baciof_8f90_source.html  bafrio_8f90_source.html  byteswap_8c.html  byteswap_8c.js  chk__endianc_8f90.js  chk__endianc_8f90_source.html  fast-byteswap_8h_source.html  files.html  files_dup.js  functions.html  globals.html  globals_func.html  index.html  namespacemembers_vars.html
ver-2.5.0/search/: all_4.js  defines_0.js  functions_0.js  searchdata.js  variables_0.js  variables_2.js
ver-2.5.0/ver-2.5.0/: baciof_8f90.html  bafrio_8f90.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  fast-byteswap_8h.html  functions_func.html  globals_defs.html  interfacebacio__module_1_1baciol.js  namespacebacio__module.html  namespacebacio__module.js  navtreedata.js
